# rust_d3d12_test1

./: Cargo.toml  README.md  build_shaders.bat
data/shaders/: test.ps.cso  test.vs.cso
src/: d3d12.rs  dx12_wrapper.rs  graphics.rs  main.rs  misc.rs  util.rs
src/d3d12/: graphics.rs  mod.rs  wrappers.rs
src/shaders/: test.hlsl
