[package]
name = "simple_d3d12"
version = "0.1.0"
authors = ["michal-z <michalziulek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.glam]
version = "0.8"

[dependencies.winapi]
version = "0.3"
features = ["impl-default", "dxgi1_4", "d3d12", "d3d12sdklayers", "winuser", "winbase", "libloaderapi", "synchapi", "profileapi", "handleapi"]
